# phyal

./: .breakpoints  .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  devcontainer.json  pyproject.toml
.github/workflows/: pypi.yml
src/: __init__.py  framework.py  html_generator.py
static/: script.js  style.css
