[tool.poetry]
name = "phyal"
version = "0.3.0"
description = "A simple to use Framework with a Python syntax that can replace HTML in a comfortable and easy way."
authors = ["SalladShooter <139503084+SalladShooter@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "phyal"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
